# C-eval

./: .clangd  .gitignore  CMakeLists.txt  README.md  main  main.c
includes/: PROGRAMACAO.code-workspace  eval.c  eval.h  msvc_compat.h  s_math.c  s_math.h  types.h  utils.c  utils.h
